refactor: authentication routes
