# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/login": {
+        "/auth/login": {
             "post": {
                 "description": "Login with email and password",
                 "consumes": [
@@ -59,7 +59,7 @@
                 }
             }
         },
-        "/register": {
+        "/auth/register": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -70,7 +70,7 @@
                 "summary": "Register a new user",
                 "parameters": [
                     {
-                        "description": "User",
+                        "description": "Register {name: string, telephone: string, email: string, password: string, role: string}",
                         "name": "user",
                         "in": "body",
                         "required": true,
